syntax = "proto3";
import "mailbox.proto";
import "google/protobuf/any.proto";
package LPS.Common.Rpc.InnerMessages;

enum ServiceRpcType
{
  ServerToService = 0;
  ServiceToServer = 1;
  ServiceToService = 2;
  HttpToService = 4;
  ServiceToHttp = 5;
}

message ServiceRpc {
    uint32 RpcID = 1;
    optional MailBox SenderMailBox = 2;
    string ServiceName = 3;
    string MethodName = 4;
    bool RandomShard = 5;
    uint32 ShardID = 6; // -1 for random
    bool NotifyOnly = 7;
    ServiceRpcType RpcType = 8;
    uint32 ServiceManagerRpcId = 9;
    repeated google.protobuf.Any Args = 10;
};

message ServiceRpcCallBack {
    uint32 RpcID = 1;
    ServiceRpcType RpcType = 2;
    optional MailBox TargetMailBox = 3;
    uint32 ServiceManagerRpcId = 4;
    google.protobuf.Any Result = 5;
}